--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,30 @@
 	<properties>
 		<java.version>17</java.version>
 	</properties>
+	<repositories>
+		<repository>
+			<releases>
+				<enabled>true</enabled>
+				<updatePolicy>always</updatePolicy>
+				<checksumPolicy>fail</checksumPolicy>
+			</releases>
+			<id>smsapi</id>
+			<name>smsapi</name>
+			<url>https://labs.smsapi.com/maven/</url>
+			<layout>default</layout>
+		</repository>
+	</repositories>
 	<dependencies>
+		<dependency>
+			<groupId>org.apache.pdfbox</groupId>
+			<artifactId>pdfbox</artifactId>
+			<version>2.0.27</version>
+		</dependency>
+			<dependency>
+				<groupId>pl.smsapi</groupId>
+				<artifactId>smsapi-lib</artifactId>
+				<version>2.5</version>
+			</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
