--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,8 @@ services:
       SPRING_DATASOURCE_URL: ${DB_URL}
       SPRING_DATASOURCE_USERNAME: ${DB_USERNAME}
       SPRING_DATASOURCE_PASSWORD: ${DB_PASSWORD}
+      APP_BACKEND_BASE_URL: ${APP_BACKEND_BASE_URL}
+      SMS_API_TOKEN: ${SMS_API_TOKEN}
     restart: always
     networks:
       - mediamate-network
