--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,8 +14,8 @@ services:
       SPRING_DATASOURCE_PASSWORD: ${DB_PASSWORD}
       APP_BACKEND_BASE_URL: ${APP_BACKEND_BASE_URL}
       SMS_API_TOKEN: ${SMS_API_TOKEN}
-      EMAIL_USERNAME: $(EMAIL_USERNAME)
-      EMAIL_PASSWORD: $(EMAIL_PASSWORD)
+      EMAIL_USERNAME: ${EMAIL_USERNAME}
+      EMAIL_PASSWORD: ${EMAIL_PASSWORD}
     restart: always
     networks:
       - mediamate-network
